GVT-2891 Remove unnecessary quotes & fix icon alignment

--- a/ui/src/geoviite-design-lib/accordion/accordion.scss
+++ b/ui/src/geoviite-design-lib/accordion/accordion.scss
@@ -34,5 +34,6 @@
 
 .accordion__error-icon {
     margin-left: auto;
+    margin-right: 2px;
     fill: vayla-design.$color-red-dark;
 }
